[+] Реализована регистрация нового пользователя
