# accounts-service/src/main/resources/api-spec.yaml
@@ -30,6 +30,29 @@ paths:
           description: Неверный запрос (валидация не пройдена)
         '401':
           description: Неверные логин или пароль
+  /auth/register:
+    post:
+      tags:
+        - Auth
+      operationId: register
+      summary: Регистрирует нового пользователя
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegisterRequest'
+      responses:
+        '201':
+          description: Пользователь создан
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RegisterResponse'
+        '400':
+          description: Неверный запрос (валидация не пройдена)
+        '409':
+          description: Такой пользователь уже существует
 components:
   schemas:
     ValidateRequest:
@@ -57,7 +80,7 @@ components:
         login:
           type: string
           example: "user123"
-          description: Имя пользователя
+          description: Логин пользователя
         roles:
           type: array
           items:
@@ -67,3 +90,42 @@ components:
       required:
         - login
         - roles
+    RegisterRequest:
+      type: object
+      properties:
+        login:
+          type: string
+          minLength: 3
+          maxLength: 50
+          example: "user123"
+          description: Логин пользователя
+        password:
+          type: string
+          minLength: 3
+          maxLength: 100
+          format: password
+          example: "qwerty123"
+          description: Пароль (минимум 3 символов)
+        userName:
+          type: string
+          minLength: 1
+          maxLength: 100
+          description: Фамилия Имя
+        birthDate:
+          type: string
+          format: date
+          description: Дата рождения
+      required:
+        - login
+        - password
+        - userName
+        - birthDate
+    RegisterResponse:
+      type: object
+      properties:
+        login:
+          type: string
+          example: "user123"
+          description: Логин пользователя
+      required:
+        - login
