# front-service/src/main/java/com/example/ibank/front/controller/LoginController.java
@@ -1,19 +1,28 @@
 package com.example.ibank.front.controller;
 
+import com.example.ibank.front.dto.SignupDto;
+import com.example.ibank.front.security.AuthService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang.StringUtils;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
+
+import java.util.List;
+import java.util.Objects;
 
 @Controller
 @RequiredArgsConstructor
 @Slf4j
 @Validated
 public class LoginController {
+
+    private final AuthService srv;
 
     @GetMapping( "/login")
     Mono<String> login(
@@ -35,12 +44,47 @@ public class LoginController {
     }
 
     @GetMapping( "/signup")
-    Mono<String> signup(
+    Mono<String> signupGet(
         ServerWebExchange exchange,
         Model model
     ) {
-        log.debug( "signup:");
+        log.debug( "signupGet");
         return Mono.just( "signup");
+    }
+
+    @PostMapping( "/signup")
+    Mono<String> signupPost(
+        SignupDto sd,
+        ServerWebExchange exchange,
+        Model model
+    ) {
+        log.debug( "signupPost: login: {}", sd.getLogin());
+        String errorMessage =
+            StringUtils.isEmpty( sd.getLogin()) ? "Не заполнено [Логин]" :
+            StringUtils.isEmpty( sd.getPassword()) ? "Не заполнено [Пароль]" :
+            StringUtils.isEmpty( sd.getName()) ? "Не заполнено [Фамилия Имя]" :
+            sd.getBirthdate() == null ? "Не заполнено [Дата рождения]" :
+            ! sd.getPassword().equals( sd.getConfirmPassword()) ?  "Указаны различные пароли" :
+            null
+        ;
+        return ( errorMessage != null
+                ? Mono.error( new IllegalArgumentException( errorMessage))
+                : srv.register( sd)
+            )
+            .map( r -> "redirect:/main")
+            .switchIfEmpty( Mono.error( new IllegalStateException( "Response not found")))
+            .onErrorResume( e -> {
+                log.debug( "signupPost: errorMessage: {}", e.getMessage());
+                model.addAttribute("login", sd.getLogin());
+                model.addAttribute(
+                    "password",
+                    Objects.equals( sd.getPassword(), sd.getConfirmPassword()) ? sd.getPassword() : ""
+                );
+                model.addAttribute("name", sd.getName());
+                model.addAttribute("birthdate", sd.getBirthdate());
+                model.addAttribute("errors", List.of( e.getMessage()));
+                return Mono.just( "signup");
+            });
     }
 
     @GetMapping( "/logout")
